--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "chartfront",
-  "version": "1.0.0",
-  "description": "Repositório dedicado ao Frontend.",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/daavii-b/ChartFront.git"
+  "dependencies": {
+    "@vitejs/plugin-react": "^3.1.0",
+    "axios": "^1.3.4",
+    "history": "^5.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.9",
+    "vite": "^4.2.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/daavii-b/ChartFront/issues"
-  },
-  "homepage": "https://github.com/daavii-b/ChartFront#readme",
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
