--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "prettier.configPath": "./.prettierrc",
+    "prettier.configPath": "./.prettierrc.cjs",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
         "source.fixAll": true,
