fix: fixing eslint and prettier error; config: setting the colors to use; created an empty page "welcome"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.rulers": [80, 120],
     "prettier.configPath": "./.prettierrc.cjs",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
