--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
